fix: aumentar gap inferior entre sidebar/main y frame naranja
Cambiar height de calc(100vh-105px) a calc(100vh-121px) y margin-bottom
de 50px a 66px para que el gap inferior (~23px) sea similar al gap
izquierdo (~24px) y superior (~18px) respecto al frame naranja.

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -212,17 +212,17 @@ h1, h2, h3, h4, h5, h6 {
   .dg-sidebar {
     top: 55px !important;
     left: 70px !important;
-    height: calc(100vh - 55px - 50px) !important;
+    height: calc(100vh - 121px) !important;
     border-radius: 15px !important;
   }
 
   .dg-main {
     margin-top: 55px !important;
     margin-right: 55px !important;
-    margin-bottom: 50px !important;
+    margin-bottom: 66px !important;
     border-radius: 15px !important;
-    height: calc(100vh - 55px - 50px) !important;
-    max-height: calc(100vh - 55px - 50px) !important;
+    height: calc(100vh - 121px) !important;
+    max-height: calc(100vh - 121px) !important;
     background: #fff !important;
     overflow-y: auto;
     overflow-x: hidden;
@@ -363,7 +363,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 992px) {
   .dg-panel {
     top: 55px !important;
-    height: calc(100vh - 55px - 50px) !important;
+    height: calc(100vh - 121px) !important;
     border-radius: 15px !important;
   }
 }
